# OOP_Space_Invaders

./: .gitignore  CMakeLists.txt  Enemy.cpp  Enemy.hpp  EnemyLaser.cpp  EnemyLaser.hpp  EnemyUFO.cpp  EnemyUFO.hpp  Entity.cpp  Entity.hpp  Explosion.cpp  Explosion.hpp  GameManager.cpp  GameManager.hpp  Laser.cpp  Laser.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  README.md  Space-Invaders.sln  Space-Invaders.vcxproj  Space-Invaders.vcxproj.filters  SpaceShip.cpp  SpaceShip.hpp  main.cpp
